--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
             <img src="public/img/turtle.jpg" alt="sea turtle swimming">
           </div>
         </div>
+        <div class="center-container">
+          <div class="card">
+            <div class="caption">
+              <h4>Hello</h4>
+              <p>Misty Gage</p>
+              <p>Point Defiance Zoo, Tacoma, WA</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="public/img/walrus.jpg" alt="walrus swimming with bubbles">
+          </div>
+        </div>
+        <!-- end walrus picture and caption -->
         <!-- begin tree picture and caption -->
         <div class="center-container">
           <div class="card">
